[project]
name = "django-redis-tasks"
version = "0.1.0"
description = "Django tasks backend using Redis queues"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.11"
authors = [
    { name = "David Nugent", email = "davidn@uniquode.io" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
]
dependencies = [
    "django>=5.1.4",
    "django_tasks>=0.6.1",
]

[project.urls]
Source = "https://github.com/deeprave/django-redis-tasks"
Issues = "https://github.com/deeprave/django-redis-tasks/issues"
Changelog = "https://github.com/deeprave/django-redis-tasks/releases"

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "testcontainers>=4.9.0",
    "pytest-asyncio>=0.25.0",
]
redis = [
    "redis>=5.2.1",
]

[tool.uv]
default-groups = ["dev", "redis"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
